<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/layout_signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_10_digit_mobile_number"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/hint_enter_phone_number"
            android:inputType="phone"
            android:maxLength="10" />

        <Button
            android:id="@+id/bt_signin_with_phonenumber"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:onClick="signInWithPhoneNumber"
            android:text="@string/button_get_otp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_otp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_getOtp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_otp"
            android:inputType="phone"
            android:focusable="true"/>

        <Button
            android:id="@+id/bt_verifyOtp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:alpha="0.7"
            android:onClick="verifyOtp"
            android:text="@string/button_verify" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:onClick="resendOtp"
            android:text="@string/resend_otp"
            android:textStyle="bold" />

    </LinearLayout>

    <include android:id="@+id/layout_restaurant_info"
        layout="@layout/restaurant_personal_info"
        android:visibility="gone" />

    <!--<LinearLayout
        android:id="@+id/layout_user_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_shop_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_shop_name" />

        <EditText
            android:id="@+id/et_owner_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_owner_name" />

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/button_submit"
            android:onClick="submitInformation"/>

    </LinearLayout>-->
</android.support.constraint.ConstraintLayout>
