<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_menu_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/menu_category"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey" />

    <EditText
        android:id="@+id/et_menu_item_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/menu_item_name"
        android:inputType="textPersonName"
        android:layout_below="@+id/et_menu_category"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey" />

    <EditText
        android:id="@+id/et_menu_item_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/menu_item_price"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:layout_below="@+id/et_menu_item_name" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</RelativeLayout>
